# discordGMP

./: CMakeLists.txt  README.md  callback.html  index.html
discord_game_sdk/cpp/: types.h
src/: main.cpp
